# letsbot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
nginx/: Dockerfile  nginx.conf
src/: bot.py  config.py  db.py  filters.py  init_db.sql  load.py  main.py  middlewares.py  person.py  routes.py  server.py  states.py  utils.py
src/bot_routes/: __init__.py  admin_router.py  main_router.py  register_router.py
